[cmake] Export package

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,11 +3,32 @@ project(nao_description)
 
 find_package(catkin REQUIRED COMPONENTS xacro)
 
-# Configure the develspace pkg-config file
-set(DATADIR "${PROJECT_SOURCE_DIR}")
-configure_file(
-  "${PROJECT_SOURCE_DIR}/${PROJECT_NAME}.pc.cmake"
-  "${CATKIN_DEVEL_PREFIX}/lib/pkgconfig/${PROJECT_NAME}.pc")
+find_package(catkin)
+
+if(${catkin_FOUND})
+  catkin_python_setup()
+
+  catkin_package(SKIP_PKG_CONFIG_GENERATION)
+
+  # Configure the develspace pkg-config file
+  set(DATADIR "${PROJECT_SOURCE_DIR}")
+  configure_file(
+    "${PROJECT_SOURCE_DIR}/${PROJECT_NAME}.pc.cmake"
+    "${CATKIN_DEVEL_PREFIX}/lib/pkgconfig/${PROJECT_NAME}.pc")
+else()
+  include(CMakePackageConfigHelpers)
+  set(VERSION_CONFIG "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}ConfigVersion.cmake")
+  set(PROJECT_CONFIG "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}Config.cmake")
+  set(CONFIG_INSTALL_DIR "lib/cmake/${PROJECT_NAME}")
+  write_basic_package_version_file(
+    ${VERSION_CONFIG}
+    VERSION 1.0.0
+    COMPATIBILITY SameMajorVersion
+  )
+  configure_package_config_file(cmake/Config.cmake.in "${PROJECT_CONFIG}" INSTALL_DESTINATION "${CONFIG_INSTALL_DIR}")
+  install(FILES "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}Config.cmake" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}ConfigVersion.cmake" DESTINATION "${CONFIG_INSTALL_DIR}")
+  set(CATKIN_PACKAGE_SHARE_DESTINATION share/${PROJECT_NAME})
+endif()
 
 # Configure the installspace pkg-config file
 set(DATADIR "${CMAKE_INSTALL_PREFIX}/${CATKIN_PACKAGE_SHARE_DESTINATION}")
@@ -19,23 +40,7 @@ install(
   FILES ${CMAKE_CURRENT_BINARY_DIR}/catkin_generated/installspace/${PROJECT_NAME}.pc
   DESTINATION lib/pkgconfig)
 
-catkin_python_setup()
-
-install(DIRECTORY urdf/
-	DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}/urdf
-	PATTERN "*.xacro" EXCLUDE)
-
-install(DIRECTORY convex/
-	DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}/convex)
-
-install(DIRECTORY stpbv/
-	DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}/stpbv)
-
-install(DIRECTORY meshes/
-	DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}/meshes)
-
-install(DIRECTORY rsdf/
-	DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}/rsdf)
-
-install(DIRECTORY surfaces/
-	DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}/surfaces)
+foreach(dir blend convex launch materials meshes rsdf urdf)
+   install(DIRECTORY ${dir}/
+      DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}/${dir})
+endforeach(dir)
